# restapi_mcp_server

./: .dockerignore  .gitignore  Docker  README.md  install.sh  pyproject.toml  start.sh
restapi_mcp_server/: __main__.py  pyproject.toml
restapi_mcp_server/src/api/: router.py
restapi_mcp_server/src/constants/: COMMON.py  __init__.py
restapi_mcp_server/src/models/: __init__.py  bas64interpolationSchema.py  jqSchema.py  restapiSchema.py  sessionSchema.py  transacationSchema.py  variablesSchema.py
restapi_mcp_server/src/services/: restapi.py  transactions.py  variablesInterpolation.py
restapi_mcp_server/src/utils/: jqinterpolation.py  persist.py  restapi.py
restapi_mcp_server/static/: index.html
skills/obrl/: SKILL.md
skills/obrl/output/: formatted.html  report.html  summary.html  summary.md
skills/obrl/references/: behavior-rules.md  step-08-populate-default-branch-date.md  step-09-validate-default-branch-date.md  step-10-populate-maker-token.md  step-11-validate-maker-token.md  step-12-populate-checker-token.md  step-13-validate-checker-token.md  step-14-check-existing-branch-keyid-gate-for-branch-creation.md  step-15-create-branch-only-if-branch-keyid-is-not-available.md  step-16-authorize-branch-only-if-a-new-branch-was-created-in-step-15.md  step-17-validate-branch-keyid-post-creation-authorization.md  step-18-get-maker-uuid-if-step-15-completed-or-maker-keyid-is-not-available.md  step-19-get-role-uuid-only-if-role-super-admin-keyid-is-not-available.md  step-27-branch-holidays.md  step-38-create-party.md  (+18 more)
storage/: environment.csv  transaction.csv
(+29 files in other folders)
