[project]
name = "restapi-mcp-server"
version = "0.0.1"
description = "RestAPI MCP Server - SSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jq>=1.10.0",
    "mcp>=1.25.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
    "twine>=6.2.0",
]

[project.scripts]
restapi_mcp_server = "restapi_mcp_server.__main__:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Explicitly include only our package and exclude the storage folder
include = ["restapi_mcp_server*"]
exclude = ["storage*"]
